# ansible-role-user

./: .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt  tasks.py
defaults/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml  playbook.yml
molecule/default/common/: test_common.py
molecule/default/tests/: test_default.py
molecule/password/: molecule.yml
molecule/password/tests/: __init__.py  test_pw.py
tasks/: main.yml
vars/: main.yml
