[project]
name = "user"
version = "1.2.6"
description = "Ansible role for configuring a user"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["ansible>=13.4.0", "passlib>=1.7.4"]

[dependency-groups]
dev = [
    "ansible-lint>=26.2.0",
    "invoke>=2.2.1",
    "molecule>=26.2.0",
    "molecule-docker>=2.1.0",
    "pytest-testinfra>=10.2.2",
    "ruff>=0.15.4",
]

[tool.ruff]
exclude = [".venv", ".git", ".vscode", "__pycache__"]
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
extend-select = ["I"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
